# rosneuro_processing

./: CMakeLists.txt  package.xml
classifiers/: F1_bhbf_20190709.mat
include/rosneuro_processing/: EogBci.hpp  SmrBci.hpp
src/: EogBci.cpp  SmrBci.cpp  fakeprocessing.cpp  test_eogbci.cpp  test_processing.cpp  test_smrbci.cpp
