<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_processing</name>
  <version>0.0.0</version>
  <description>The rosneuro processing package</description>

  <author email="gloria.beraldo@phd.unipd.it">Stefano Tortora</author>
  <maintainer email="gloria.beraldo@phd.unipd.it">Stefano Tortora</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rosneuro_data</depend>
  <depend>rosneuro_msgs</depend>
  <depend>message_generation</depend>
  <depend>eigen</depend>
  
  <exec_depend>message_runtime</exec_depend>

</package>
